# iChat

./: .gitignore  README.md
server/: CMakeLists.txt  compose.yaml
server/common/: asr.hpp  channel.hpp  data_mysql.hpp  data_mysql_friend_request.hpp  data_mysql_message.hpp  data_mysql_relation.hpp  data_mysql_session.hpp  data_mysql_session_member.hpp  data_mysql_user.hpp  data_redis.hpp  data_search.hpp  etcd.hpp  logger.hpp  mq.hpp  registry.hpp  search.hpp  sms.hpp  utils.hpp
server/conf/: file_server.conf  forward_server.conf  friend_server.conf  gateway_server.conf  message_server.conf  speech_server.conf  user_server.conf
server/odb/: friend_request.hxx  message.hxx  relation.hxx  session.hxx  session_member.hxx  user.hxx
server/proto/: base.proto  file.proto  forward.proto  friend.proto  gateway.proto  message.proto  notify.proto  speech.proto  user.proto
server/script/: build.sh  depend.sh  entrypoint.sh
server/service/: CMakeLists.txt
server/service/file/: CMakeLists.txt  Dockerfile
server/service/file/src/: file_server.cc  file_server.hpp
server/service/file/test/: file_client.cc
server/service/forward/: CMakeLists.txt  Dockerfile
server/service/forward/src/: forward_server.cc  forward_server.hpp
server/service/forward/test/: forward_client.cc
server/service/friend/: CMakeLists.txt  Dockerfile
server/service/friend/src/: friend_server.cc  friend_server.hpp
server/service/friend/test/: friend_client.cc
server/service/gateway/: CMakeLists.txt  Dockerfile
server/service/gateway/src/: connection.hpp  gateway_server.cc  gateway_server.hpp
server/service/message/: CMakeLists.txt  Dockerfile
server/service/message/src/: message_server.cc  message_server.hpp
server/service/message/test/: message_client.cc
server/service/speech/: CMakeLists.txt  Dockerfile
server/service/speech/src/: speech_server.cc  speech_server.hpp  speech_service.cc  speech_service.hpp
server/service/speech/test/: speech_client.cc
server/service/user/: CMakeLists.txt  Dockerfile
server/service/user/src/: user_server.cc  user_server.hpp
server/service/user/test/: user_client.cc
server/sql/: friend_request.sql  message.sql  relation.sql  session.sql  session_member.sql  user.sql
